--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,9 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="title_averages">Avengers:   End Game</string>
+    <string name="title_red">Action, Adventure, Fantasy</string>
+    <string name="number">13+</string>
+    <string name="back">Back</string>
+
 </resources>
