--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,13 @@
     <string name="title_red">Action, Adventure, Fantasy</string>
     <string name="number">13+</string>
     <string name="back">Back</string>
+    <string name="story">Storyline</string>
+    <string name="storydesc">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
+    <string name="cast">Cast</string>
+    <string name="rewiews_text">125 Reviews</string>
+    <string name="robertot">Robert Downey Jr.</string>
+    <string name="evanst">Chris Evans </string>
+    <string name="markt">Mark Ruffalo </string>
+    <string name="christ">Chris Hemsworth </string>
 
 </resources>
