--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,8 @@
     <string name="evans_text">Chris Evans </string>
     <string name="mark_text">Mark Ruffalo </string>
     <string name="chris_text">Chris Hemsworth </string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="movie_list">Movie list</string>
 
 </resources>
