all new  fragment_movie_list.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="chris_text">Chris Hemsworth </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="movie_list">Movie list</string>
+    <string name="movie_list">Movies list</string>
+    <string name="run_minutes">137 min</string>
 
 </resources>
